# bluespy-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: demo-prompts.md  hardware-lifecycle.md
scripts/: test.sh
src/bluespy_mcp/: __init__.py  __main__.py  analysis_core.py  analyzer.py  capture.py  hardware.py  loader.py  packet_cache.py  server.py  worker.py
src/bluespy_mcp/_vendor/: bluespy.py
tests/: conftest.py  test_analysis_core.py  test_analyzer.py  test_capture.py  test_hardware.py  test_integration.py  test_loader.py  test_packet_cache.py  test_server.py  test_server_hardware.py  test_worker.py
tests/e2e/: __init__.py  conftest.py  scenario.py  test_scenario.py
tests/e2e/fixtures/: prompts.py
tests/e2e/scenarios/: __init__.py  test_error_handling.py  test_file_analysis.py  test_hardware_capture.py  test_live_analysis.py
tests/fixtures/: 5_sec_capture.pcapng  capture_test.pcapng  smart_home_capture_10min.pcapng
