[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluespy-mcp"
version = "1.1.0"
description = "MCP server for BlueSPY Bluetooth LE protocol analyzer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mohammad Afaneh", email = "mafaneh@novelbits.io" },
]
keywords = ["bluetooth", "ble", "mcp", "bluespy", "sniffer", "protocol-analyzer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
bluespy-mcp = "bluespy_mcp.server:main"

[project.urls]
Homepage = "https://github.com/novelbits/bluespy-mcp"
Repository = "https://github.com/novelbits/bluespy-mcp"
Issues = "https://github.com/novelbits/bluespy-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bluespy_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: tests requiring BlueSPY hardware and dylib (deselect with '-m \"not hardware\"')",
]
